--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.15.3",
     "file-loader": "^0.11.2",
+    "hashrouter": "^1.1.1",
     "json-loader": "^0.5.4",
     "less": "^3.8.1",
     "less-plugin-autoprefix": "^1.5.1",
@@ -31,7 +32,11 @@
     "prop-types": "^15.5.10",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-redux": "^5.1.2",
+    "react-router": "^5.1.2",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.5",
+    "redux-promise-middleware": "^6.1.2",
     "serve-favicon": "^2.0.1",
     "url-loader": "^1.1.1",
     "webpack": "^4.8.3",
