--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "A new React project.",
   "main": "server/index.js",
   "scripts": {
-    "build": "npm run less && webpack",
+    "build": "webpack --mode development",
     "start": "npm run build && node server/index.js",
     "less": "lessc src/css/style.less dist/css/style.css",
     "lint": "eslint .",
     "test": "npm run build && mocha test/setup.js test/*.spec.js --exit"
   },
   "dependencies": {
-    "axios": "^0.16.1",
+    "@types/dotenv": "^8.2.0",
+    "axios": "^0.19.2",
     "babel": "^6.3.26",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.7.0",
@@ -29,18 +30,19 @@
     "lodash": "^4.17.10",
     "lodash-webpack-plugin": "^0.10.2",
     "morgan": "^1.8.1",
+    "nodemon": "^1.19.1",
     "prop-types": "^15.5.10",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-redux": "^5.1.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-router": "^5.1.2",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.0.0",
     "redux": "^4.0.5",
-    "redux-promise-middleware": "^6.1.2",
+    "redux-promise-middleware": "^5.1.1",
     "serve-favicon": "^2.0.1",
     "url-loader": "^1.1.1",
     "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3"
+    "webpack-cli": "^3.1.0"
   },
   "devDependencies": {
     "axios-mock-adapter": "^1.6.1",
@@ -61,5 +63,19 @@
     "react-addons-test-utils": "^15.6.0",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/seanphenomenon/react200-movie-finder.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/seanphenomenon/react200-movie-finder/issues"
+  },
+  "homepage": "https://github.com/seanphenomenon/react200-movie-finder#readme"
 }
