--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,7 @@
 {
-  "extends": "airbnb",
+  "extends": ["airbnb", "prettier"],
+  "plugins": ["prettier"],
   "rules": {
-    "jsx-quotes": [2, "prefer-single"],
-    "react/jsx-curly-spacing": [2, "always"],
-    "react/prefer-stateless-function": [0],
-    "comma-dangle": "off"
+    "prettier/prettier": ["error"]
   }
 }
