--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A new React project.",
   "main": "server/index.js",
   "scripts": {
-    "build": "webpack --mode development",
-    "start": "npm run build && node server/index.js",
+    "build": "webpack --mode development ",
+    "start": "npm run build && node server/index.js ",
     "less": "lessc src/css/style.less dist/css/style.css",
     "lint": "eslint .",
     "test": "npm run build && mocha test/setup.js test/*.spec.js --exit"
@@ -61,6 +61,7 @@
     "mocha": "^5.2.0",
     "nightmare": "^3.0.1",
     "react-addons-test-utils": "^15.6.0",
+    "react-hot-loader": "^4.13.0",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0"
   },
